# staticgen

./: .gitignore  setup.cfg
ex/: conf.py
ex/templates/: home.html
example.com/ex/: conf.py  urls.py
example.com/ex/templates/: home.html
example/ex/: conf.py  urls.py
example/ex/templates/: home.html
staticgen/: app.py  build.py  commands.py  conf.py  http.py  server.py  site.py  urls.py  views.py  wsgi.py
