[metadata]
name = staticgen
version = 0.0.1
description = A kind of static site generator

[options]
python_requires = >=3.6
packages = staticgen
install_requires = 
    Click==7.0
    Jinja2==2.10.3
    MarkupSafe==1.1.1
    mistune==0.8.4
    parse==1.14.0
    Pillow==7.0.0
    livereload==2.6.1

[options.entry_points]
console_scripts =
    staticgen = staticgen.commands:main
